--- a/src/assets/css/students.css
+++ b/src/assets/css/students.css
@@ -21,11 +21,13 @@
     border-collapse: collapse;  
     color: rgb(20,21,24); 
     box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.3);
+    
 }
 .table-students td{
     border-top: 1px solid rgba(255, 255, 255, .3);
 }
 .table-students tr:hover{ 
+    transition: background-color .5s;
     background-color: rgba(255, 255, 255, .3)
 }
 
